Styles and content.

--- a/index.html
+++ b/index.html
@@ -52,78 +52,82 @@
             </div>
             <h2>Keyboard Layout</h2>
             <div>
-                <p>Der VI ist auf manchen Tastaturlayouts nicht so
-                einfach zu bedienen. Hier Bilder der verschiedenen
-                Tastenmodi</p>
+                <p>Mit einer deutschen Tastatur ist der VI(M) nicht so einfach zu bedienen und manchen Kommandos
+                sind schwieriger zu erreichen als mit einem englischen Tastaturlayout.</p>
+                <p>Die Bilder zeigen den Unterschied zwischen englischem und deutschem Tastaturlayout.</p>
+                <p>Standard. Im deutschen sind die <a href="http://de.wikipedia.org/wiki/Tottaste">Tottasten</a> <kbd>^</kbd> und <kbd>´</kbd> aktiviert</p>
                 <img src="images/en_key_neutral.png">
                 <img src="images/de_key_neutral.png">
                 <br />
 
+                <p>Mit gedückter Umschalt-Taste.</p>
                 <img src="images/en_key_shift.png">
                 <img src="images/de_key_shift.png">
                 <br />
 
+                <p>Mit gedrückter Steuerungs-Taste. Die Tottasten sind dekativiert!</p>
                 <img src="images/en_key_ctrl.png">
                 <img src="images/de_key_ctrl.png">
                 <br />
 
+                <p>Mit gedrückter Alt-Taste.</p>
                 <img src="images/en_key_alt.png">
                 <img src="images/de_key_alt.png">
                 <br />
 
+                <p>Mit gleichzeitig gedrückter Umschalt- und Steuerungs-Taste</p>
                 <img src="images/en_key_ctrl_shift.png">
                 <img src="images/de_key_ctrl_shift.png">
                 <br />
 
+                <p>Mit gleichzeitig gedrückter Umschalt- und Alt-Taste.</p>
                 <img src="images/en_key_alt_shift.png">
                 <img src="images/de_key_alt_shift.png">
                 <br />
 
+                <p>Mit gleichzeitig gedrückter Alt- und Steuerungs-Taste</p>
                 <img src="images/en_key_ctrl_alt.png">
                 <img src="images/de_key_ctrl_alt.png">
                 <br />
 
+                <p>Mit gleichzeitig gedrückter Umschalt-, Steuerungs- und Alt-Taste</p>
                 <img src="images/en_key_ctrl_alt_shift.png">
                 <img src="images/de_key_ctrl_alt_shift.png">
                 <br />
 
+                <p>Mit gedrückter Funktions-Taste.</p>
                 <img src="images/en_key_fn.png">
                 <img src="images/de_key_fn.png">
             </div>
             <!--Browse-->
             <h2>The nature</h2>
             <div class="row-fluid">
+                <p>
                 Ups, eine englische Überschrift in einem deutschen Tutorial? 
                 Ja, die Natur von VIM ist einfach englisch. Viele Befehle lassen sich mit einer
                 englischen oder amerikanischen Tastaturbelegung einfacher Bedienen als mit einer
                 Deutschen.
                 Nichtsdestotrotz ist der VI ein hervorragender und
-                anpassungsfähiger Editor 
-                <kbd>Test</kbd>
-                <kbd>Command</kbd>
-                <span class="key">ü</span>
-                <span class="key">ä</span>
-                <span class="key">ctrgdfgsl</span>
-                <span class="key">y</span>
-                und weiter im Text.
-                <div class="span3">CRTL-]</div>
+                anpassungsfähiger Editor.
+                </p>
+                <div class="span3">
+                    <kbd>strg</kbd><kbd>]</kbd>
+                </div>
                 <div class="span3">Springe zum Link oder suche nach dem Wort in der Hilfe</div>
             </div>
             <h2>Browse</h2>
             <div class="row-fluid">
                 <div class="span3">
-                    <span class="key">strg</span><span
-                        class="key">]</span><br />
-                    Deutsch:<br />
-                    <span class="key">strg</span><span
-                        class="key">alt</span><span class="key">](6)</span>
+                    <kbd>strg</kbd><kbd>]</kbd><br />
+                    Deutsch (Mac):<br />
+                    <kbd>strg</kbd><kbd>alt</kbd><kbd>6</kbd>
                 </div>
                 <div class="span3">Springe zum Link oder suche nach dem Wort in der Hilfe</div>
             </div>
             <div class="row-fluid">
                 <div class="span3">
-                    <span class="key">strg</span><span class="key">o</span><br />
-                    <span class="key">strg</span><span class="key">t</span>
+                    <kbd>strg</kbd><kbd>o</kbd><br />
+                    <kbd>strg</kbd><kbd>t</kbd>
                 </div>
                 <div class="span3">Sprung zurück</div>
             </div>
@@ -136,13 +140,13 @@
             </div>
             <div class="row-fluid">
                 <div class="span3">
-                    :help word <span class="key">strg</span><span class="key">d</span><br />
+                    :help word <kbd>strg</kbd><kbd>d</kbd><br />
                     :helpgrep word
                 </div>
                 <div class="span3">Zeigt die Namen aller Hilfedateien in denen 'word' vorkommt.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">:xxxx <span class="key">strg</span><span class="key">d</span><br /></div>
+                <div class="span3">:xxxx <kbd>strg</kbd><kbd>d</kbd><br /></div>
                 <div class="span3">Zeigt alle möglichen Optionen zu dem Befehl :xxxx.</div>
             </div>
             <div class="row-fluid">
@@ -196,120 +200,120 @@
             <h2>Bewegen</h2>
             <div class="abstract">
                 <p>Bewegungen werden im normal modus durchgeführt. In den
-                normal Modus gelangt man durch drücken von &lt;Esc&gt;. Um ganz
+                normal Modus gelangt man durch drücken von <kbd>Esc</kbd>. Um ganz
                 sicher in den normal Modus zu gelangen drückt man einfach 2x
-                &lt;Esc&gt;</p>
+                <kbd>Esc</kbd></p>
             </div>
             <div class="row-fluid">
-                <div class="span3">h</div>
+                <div class="span3"><kbd>h</kbd></div>
                 <div class="span3">nach links</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">j</div>
+                <div class="span3"><kbd>j</kbd></div>
                 <div class="span3">nach unten</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">k</div>
+                <div class="span3"><kbd>k</kbd></div>
                 <div class="span3">nach oben</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">l</div>
+                <div class="span3"><kbd>l</kbd></div>
                 <div class="span3">nach rechts</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">gg</div>
+                <div class="span3"><kbd>g</kbd><kbd>g</kbd></div>
                 <div class="span3">zum Anfang der Datei springen</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">G</div>
+                <div class="span3"><kbd>Umschalt</kbd><kbd>g</kbd> ( <kbd>G</kbd>)</div>
                 <div class="span3">zum Ende der Datei springen</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">3G</div>
+                <div class="span3"><kbd>3</kbd><kbd>G</kbd></div>
                 <div class="span3">in die dritte Zeile springen</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">w</div>
+                <div class="span3"><kbd>w</kbd></div>
                 <div class="span3">ein Wort vorwärts</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">b</div>
+                <div class="span3"><kbd>b</kbd></div>
                 <div class="span3">ein Wort rückwärts</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">$</div>
+                <div class="span3"><kbd>$</kbd></div>
                 <div class="span3">zum Zeilenende</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">0</div>
+                <div class="span3"><kbd>0</kbd></div>
                 <div class="span3">zum Zeilenanfang</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">^</div>
+                <div class="span3"><kbd>^</kbd></div>
                 <div class="span3">zum ersten Zeichen der Zeile</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">f&lt;</div>
+                <div class="span3"><kbd>f</kbd><kbd>&lt;</kbd></div>
                 <div class="span3">(find forward)</div>
                 <div class="span3">vorwärts bis Zeichen &lt;</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">t&lt;</div>
+                <div class="span3"><kbd>t</kbd><kbd>&lt;</kbd></div>
                 <div class="span3">(go <u>t</u>o)</div>
                 <div class="span3">vorwärts bis vor Zeichen &lt;</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">F&lt;</div>
+                <div class="span3"><kbd>F</kbd><kbd>&lt;</kbd></div>
                 <div class="span3">(find backwards)</div>
                 <div class="span3">rückwärts bis Zeichen &lt;</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">T&lt;</div>
+                <div class="span3"><kbd>T</kbd><kbd>&lt;</kbd></div>
                 <div class="span3">(back <u>t</u>o)</div>
                 <div class="span3">rückwärts bis Zeichen &lt;</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">zt</div>
+                <div class="span3"><kbd>z</kbd><kbd>t</kbd></div>
                 <div class="span3">Positionerung der aktuellen Zeile an den oberen Bildschirmrand</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">zz</div>
+                <div class="span3"><kbd>z</kbd><kbd>z</kbd></div>
                 <div class="span3">Positionierung der aktuellen Zeile in die Mitte</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">zb</div>
+                <div class="span3"><kbd>z</kbd><kbd>b</kbd></div>
                 <div class="span3">Positionierung der aktellen Zeile nach unten.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">&lt;ctrl&gt; e</div>
+                <div class="span3"><kbd>ctrl</kbd> <kbd>e</kbd></div>
                 <div class="span3">Bildschirmseite nach oben scrollen.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">&lt;ctrl&gt; f</div>
+                <div class="span3"><kbd>ctrl</kbd> <kbd>f</kbd></div>
                 <div class="span3">Ganze Bildschirmseite vorwärts.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">&lt;ctrl&gt; b</div>
+                <div class="span3"><kbd>ctrl</kbd> <kbd>b</kbd></div>
                 <div class="span3">Ganze Bildschirmseite rückwärts.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">&lt;ctrl&gt; d</div>
+                <div class="span3"><kbd>ctrl</kbd> <kbd>d</kbd></div>
                 <div class="span3">Halbe Bildschirmseite vorwärts.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">&lt;ctrl&gt; u</div>
+                <div class="span3"><kbd>ctrl</kbd> <kbd>u</kbd></div>
                 <div class="span3">Halbe Bildschirmseite rückwärts.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">&lt;shift&gt; H</div>
+                <div class="span3"><kbd>shift</kbd> <kbd>H</kbd></div>
                 <div class="span3">Cursor springt an den oberen Bildschirmrand</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">&lt;shift&gt; M</div>
+                <div class="span3"><kbd>shift</kbd> <kbd>M</kbd></div>
                 <div class="span3">Cursor springt in die Mitte des Bildschirms</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">&lt;shift&gt; L</div>
+                <div class="span3"><kbd>shift</kbd> <kbd>L</kbd></div>
                 <div class="span3">Cursor springt in die unterste Bildschirmzeile</div>
             </div>
             <!--Einfügen-->
@@ -318,39 +322,39 @@
                 <p>Die folgenden Eingaben wechseln in den Einfüge-Modus.</p>
             </div>
             <div class="row-fluid">
-                <div class="span3">i</div>
+                <div class="span3"><kbd>i</kbd></div>
                 <div class="span3">Einfügen links vom Cursor.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">I</div>
+                <div class="span3"><kbd>I</kbd></div>
                 <div class="span3">Einfügen am Zeilenanfang.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">a</div>
+                <div class="span3"><kbd>a</kbd></div>
                 <div class="span3">Einfügen rechts vom Cursor.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">A</div>
+                <div class="span3"><kbd>A</kbd></div>
                 <div class="span3">Einfügen am Zeilenende.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">o</div>
+                <div class="span3"><kbd>o</kbd></div>
                 <div class="span3">Neue Zeile hinter der aktuellen einfügen.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">O</div>
+                <div class="span3"><kbd>O</kbd></div>
                 <div class="span3">Neue Zeile vor der aktuellen einfügen.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">R</div>
+                <div class="span3"><kbd>R</kbd></div>
                 <div class="span3">Überschreiben ab Cursorposition.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">r</div>
+                <div class="span3"><kbd>r</kbd></div>
                 <div class="span3">Ersetze das Zeichen unter dem Cursor und gehe zurück in den Kommando-Modus.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3">s</div>
+                <div class="span3"><kbd>s</kbd></div>
                 <div class="span3">Ersetze das Zeichen unter dem Cursor und bleibe im Einfüge-Modus.</div>
             </div>
             <div class="row-fluid">
@@ -362,7 +366,7 @@
             </div>
             <div class="row-fluid">
                 <div class="span3">cw</div>
-                <div class="span3">Ersetze Wort.</div>
+                <div class="span3">Ersetze Wort ab der aktuellen Cursor position.</div>
             </div>
             <div class="row-fluid">
                 <div class="span3">
