Add enfold all.

--- a/index.html
+++ b/index.html
@@ -401,6 +401,10 @@
                 <div class="span3">zo</div>
                 <div class="span3">Entfaltet den gefalteten Bereich.</div>
             </div>
+            <div class="row-fluid">
+                <div class="span3">zR</div>
+                <div class="span3">Alles rekursiv aufklappen.</div>
+            </div>
             <!-- Verschiedenes //-->
             <h2>Keyboard Macros</h2>
             <div class="abstract">
