--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <img style="float: left" src="images/vimlogo.gif" />
             <h1 style="float: left">VIWIZ VI, VIM Spickzettel</h1>
             <br clear="both">
+
+
             <h2>Dateien</h2>
             <div>
                 <ul>
@@ -50,6 +52,8 @@
                     <li>~/.vimrc.before</li>
                 </ul>
             </div>
+
+
             <h2>Keyboard Layout</h2>
             <div>
                 <p>Mit einer deutschen Tastatur ist der VI(M) nicht so einfach zu bedienen und manchen Kommandos
@@ -99,7 +103,8 @@
                 <img src="images/en_key_fn.png">
                 <img src="images/de_key_fn.png">
             </div>
-            <!--Browse-->
+
+
             <h2>The nature</h2>
             <div class="row-fluid">
                 <p>
@@ -115,6 +120,8 @@
                 </div>
                 <div class="span3">Springe zum Link oder suche nach dem Wort in der Hilfe</div>
             </div>
+
+
             <h2>Browse</h2>
             <div class="row-fluid">
                 <div class="span3">
@@ -131,7 +138,8 @@
                 </div>
                 <div class="span3">Sprung zurück</div>
             </div>
-            <!--Hilfen-->
+
+
             <h2>Hilfen</h2>
             <div class="abstract">
                 <p>Um Hilfe zu den Kommandos bzw. insert und visual Mode zu
@@ -196,7 +204,8 @@
                 <div class="span3">Hilfe zu VIM-Option</div>
                 <div class="example">:help 'textwidth'</div>
             </div>
-            <!--Bewegen-->
+
+
             <h2>Bewegen</h2>
             <div class="abstract">
                 <p>Bewegungen werden im normal modus durchgeführt. In den
@@ -316,7 +325,8 @@
                 <div class="span3"><kbd>shift</kbd> <kbd>L</kbd></div>
                 <div class="span3">Cursor springt in die unterste Bildschirmzeile</div>
             </div>
-            <!--Einfügen-->
+
+
             <h2>Bearbeiten</h2>
             <div class="abstract">
                 <p>Die folgenden Eingaben wechseln in den Einfüge-Modus.</p>
@@ -339,11 +349,11 @@
             </div>
             <div class="row-fluid">
                 <div class="span3"><kbd>o</kbd></div>
-                <div class="span3">Neue Zeile hinter der aktuellen einfügen.</div>
+                <div class="span3">Neue Zeile unterhalb der aktuellen einfügen.</div>
             </div>
             <div class="row-fluid">
                 <div class="span3"><kbd>O</kbd></div>
-                <div class="span3">Neue Zeile vor der aktuellen einfügen.</div>
+                <div class="span3">Neue Zeile oberhalb der aktuellen einfügen.</div>
             </div>
             <div class="row-fluid">
                 <div class="span3"><kbd>R</kbd></div>
@@ -383,7 +393,8 @@
                 <div class="span3">~</div>
                 <div class="span3">Wechsel Groß- Kleinschreibung.</div>
             </div>
-            <!--Folding-->
+
+
             <h2>Folding</h2>
             <div class="abstract">
                 <p>Bestimmte Bereiche zusammen falten.
@@ -405,7 +416,8 @@
                 <div class="span3">zR</div>
                 <div class="span3">Alles rekursiv aufklappen.</div>
             </div>
-            <!-- Verschiedenes //-->
+
+
             <h2>Keyboard Macros</h2>
             <div class="abstract">
                 Start der Aufzeichnung mit 'q<i>Buchstabe</i>'.<br />
@@ -413,6 +425,8 @@
                 Aufrufen der Aufzeichnung mit '@q<i>Buchstabe</i><br />
                 Der Buchstabe bezeichnet das Register a-z.
             </div>
+
+
             <h2>Verschiedenes</h2>
             <div class="abstract">
                 Digraphs<br />
@@ -436,10 +450,14 @@
                 <div class="usraction">:scriptnames</div>
                 <div class="vimaction">Zeigt alle Plugins und geladenen _vimrcs</div>
             </div>
+
+
             <h2>Weitere Hilfen auf deutsch</h2>
             <p>
             <a href="http://www-user.tu-chemnitz.de/~hot/VIM/Tips_und_Tricks.html">http://www-user.tu-chemnitz.de/~hot/VIM/Tips_und_Tricks.html</a>
             </p>
+
+
             <h2>Weitere Hilfen International</h2>
             <p>
             <a href="http://www.zzapper.co.uk/vimtips.html">http://www.zzapper.co.uk/vimtips.html</a>
@@ -450,6 +468,8 @@
             <a href="http://vimtweets.com">http://vimtweets.com</a>
             Die Seite funktioniert zur Zeit ( 15. Mai 2012 ) leider nicht.
             </p>
+
+
         </div>
     </body>
 </html>
