--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             $(document).ready(function(){
                 $('h2').click(function(){
                     $(this).nextUntil('h2').toggle();
-                    $(this).toggleClass('close');
+                    $(this).toggleClass('closed');
                 });
             });
         </script>
@@ -337,23 +337,23 @@
                 <p>Die folgenden Eingaben wechseln in den Einfüge-Modus.</p>
             </div>
             <div class="row-fluid">
-                <div class="span3"><kbd>i</kbd></div>
+                <div class="span1"><kbd>i</kbd></div>
                 <div class="span3">Einfügen links vom Cursor.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3"><kbd>I</kbd></div>
+                <div class="span1"><kbd>I</kbd></div>
                 <div class="span3">Einfügen am Zeilenanfang.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3"><kbd>a</kbd></div>
+                <div class="span1"><kbd>a</kbd></div>
                 <div class="span3">Einfügen rechts vom Cursor.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3"><kbd>A</kbd></div>
+                <div class="span1"><kbd>A</kbd></div>
                 <div class="span3">Einfügen am Zeilenende.</div>
             </div>
             <div class="row-fluid">
-                <div class="span3"><kbd>o</kbd></div>
+                <div class="span1"><kbd>o</kbd></div>
                 <div class="span3">Neue Zeile unterhalb der aktuellen einfügen.</div>
             </div>
             <div class="row-fluid">
