Expand folding section.

--- a/index.html
+++ b/index.html
@@ -406,8 +406,36 @@
                 Funktioniert im Kommado- als auch im Visual-Mode.</p>
             </div>
             <div class="row-fluid">
-                <div class="span3">zfa}</div>
-                <div class="span3">Steht der Cursor in einem Block mit geschweiften Klammern wird der Block gefaltet.</div>
+                <div class="span3">zi</div>
+                <div class="span3">Faltung ein- bzw. ausschalten.</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">za</div>
+                <div class="span3">Aktuelle Faltungen öffnen / schließen.</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zA</div>
+                <div class="span3">Rekursiv aktuelle Faltungen öffnen / schließen.</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zc</div>
+                <div class="span3">Aktuelle Faltungen schließen.</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zC</div>
+                <div class="span3">Rekursiv aktuelle Faltungen schließen.</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zv</div>
+                <div class="span3">Entfalten um den Cursor herum.</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zR</div>
+                <div class="span3">Alles rekursiv aufklappen.</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zM</div>
+                <div class="span3">Alles rekursiv zuklappen.</div>
             </div>
             <div class="row-fluid">
                 <div class="span3">zf</div>
@@ -418,8 +446,42 @@
                 <div class="span3">Entfaltet den gefalteten Bereich.</div>
             </div>
             <div class="row-fluid">
+                <div class="span3">zO</div>
+                <div class="span3">Rekursives entfalten.</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zfa}</div>
+                <div class="span3">Steht der Cursor in einem Block mit geschweiften Klammern wird der Block gefaltet.</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zfi}</div>
+                <div class="span3">Steht der Cursor in einem Block mit geschweiften Klammern wird das innere vom Block gefaltet.</div>
+            </div>
+
+
+            <div class="row-fluid">
+                <div class="span3">zj</div>
+                <div class="span3">Gehe abwärts zum Anfang der nächsten Faltung.</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zk</div>
+                <div class="span3">Gehe aufwärts zum Ende der vorherigen Faltung.</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zm</div>
+                <div class="span3">reduce `foldlevel` by one</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zM</div>
+                <div class="span3">close all folds</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zr</div>
+                <div class="span3">increase `foldlevel` by one</div>
+            </div>
+            <div class="row-fluid">
                 <div class="span3">zR</div>
-                <div class="span3">Alles rekursiv aufklappen.</div>
+                <div class="span3">open all folds</div>
             </div>
 
 
