--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <br clear="both">
 
 
-            <h2>Dateien</h2>
+            <h2>Konfigurations-Dateien</h2>
 			<div>
 				<p>Die hier aufgeführten Dateien und Verzeichnisse werden zur Konfiguration
 				oder zum Speichern von Metadaten verwendet.</p>
@@ -399,8 +399,12 @@
                 <div class="span3">Wechsel Groß- Kleinschreibung.</div>
             </div>
 
+            <h2>Dateitypen (Filetype)</h2>
+            <div class="abstract">
+                <p>VIM kann Dateitypen bestimmen. :h filetype</p>
+            </div>
 
-            <h2>Folding</h2>
+            <h2>Falten (Folding)</h2>
             <div class="abstract">
                 <p>Bestimmte Bereiche zusammen falten.
                 Funktioniert im Kommado- als auch im Visual-Mode.</p>
@@ -450,6 +454,14 @@
                 <div class="span3">Rekursives entfalten.</div>
             </div>
             <div class="row-fluid">
+                <div class="span3">zfat</div>
+                <div class="span3">Faltet den äußeren Tag.</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zfit</div>
+                <div class="span3">Faltet den inneren Tag.</div>
+            </div>
+            <div class="row-fluid">
                 <div class="span3">zfa}</div>
                 <div class="span3">Steht der Cursor in einem Block mit geschweiften Klammern wird der Block gefaltet.</div>
             </div>
@@ -494,7 +506,7 @@
             </div>
 
 
-            <h2>Verschiedenes</h2>
+            <h2>Verschiedenes (Misc)</h2>
             <div class="abstract">
                 Digraphs<br />
                 :digraphs zeigt alle Digraph-Sonderzeichen an.<br />
@@ -518,6 +530,12 @@
                 <div class="vimaction">Zeigt alle Plugins und geladenen _vimrcs</div>
             </div>
 
+
+            <h2>Kopieren & Einfügen (Copy & Paste)</h2>
+            <div class="helpbox">
+                <div class="usraction">:%y+</div>
+                <div class="vimaction">Kopiert den gesamten Text in die Zwischenablage des Betriebssystems</div>
+            </div>
 
             <h2>Weitere Hilfen auf deutsch</h2>
             <p>
