Start vim without configuration.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 				oder zum Speichern von Metadaten verwendet.</p>
 			</div>
             <div>
+				<p>
+				Um vim ohne Konfiguration zu starten lautet der Aufruf so:
+				<pre>$ vim -u NONE</pre>
+				siehe auch :help init
+				</p>
                 <ul>
                     <li>~/.vim/</li>
                     <li>~/.gvimrc</li>
