--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</div>
             <div>
 				<p>
-				Um vim ohne Konfiguration zu starten lautet der Aufruf so:
+				Vim kann auch ohne Konfiguration gestartet werden:
 				<pre>$ vim -u NONE</pre>
 				siehe auch :help init
 				</p>
